--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello stevens
+<!DOCTYPE html>
+<html>
+<head>
+<title>My First blog post</title>
+
+<link type="stylesheet" type="text/css" href="stylesheet.css"/>
+<script type="text/javascript" src="script.js"></script>
+</head>
+	<body>
+		<h1>Don't get epileptic</h1>
+		</body>
+</html>
+  
