--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>My First blog post</title>
 
-<link type="stylesheet" type="text/css" href="stylesheet.css"/>
+<link rel="stylesheet" href="css/stylesheet.css">
 <script type="text/javascript" src="script.js"></script>
 </head>
 	<body>
