--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>My First blog post</title>
 <link rel="stylesheet" href="css/stylesheet.css">
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="https://rawgithubusercontent.com/slowsushi/slowsushi.github.io/master/script/script.js"></script>
 </head>
 	<body>
 		<h1>Don't get epileptic</h1>
