--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>My First blog post</title>
-<link rel="stylesheet" href="css/stylesheet.css">
+<link rel="stylesheet" href="css/stylesheet.css"/>
 <script type="text/javascript" src="script.js"></script>
 	<body>
 		<h1>Don't get epileptic</h1>
