--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My First blog post</title>
+<title>Trying to make this f-ing work!!!!!!!</title>
 <link rel="stylesheet" href="css/stylesheet.css"/>
 <script type="text/javascript" src="script.js"></script>
 	<body>
