--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Trying to make this f-ing work!!!!!!!</title>
 <link rel="stylesheet" href="css/stylesheet.css"/>
 <script type="text/javascript" src="script.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script src="/js/application.js"></script>
 	<body>
 		<h1>Don't get epileptic</h1>
 		</body>
