--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Trying to make this f-ing work!!!!!!!</title>
 <link rel="stylesheet" href="css/stylesheet.css"/>
-<script src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
    	<body>
 		<h1>Don't get epileptic</h1>
