--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Trying to make this f-ing work!!!!!!!</title>
 <link rel="stylesheet" href="css/stylesheet.css"/>
 <script src="/script/script.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script src="jquery-1.8.2.min.js"></script>
    	<body>
 		<h1>Don't get epileptic</h1>
 
