--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Trying to make this f-ing work!!!!!!!</title>
+<title>My First blog post</title>
 <link rel="stylesheet" href="css/stylesheet.css"/>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-<script src="script.js"></script>
+
 
    	<body>
 		<div><h1>Don't get epileptic</h1></div>
-
-	
-		
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script src="script.js"></script>
 	</body>
 </html>
