--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
    	<body>
-		<div><h1>Don't get epileptic</h1></div>
+		<div id="head"><h1>Don't get epileptic</h1></div>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <script src="script.js"></script>
 	</body>
