--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html>
 <head>
 <title>My First blog post</title>
-
-<<<<<<< HEAD
 <link type="stylesheet" type="text/css" href="stylesheet.css"/>
-=======
 <link rel="stylesheet" href="css/stylesheet.css">
->>>>>>> FETCH_HEAD
 <script type="text/javascript" src="script.js"></script>
 </head>
 	<body>
-		<h1>Don't get epileptic</h1>
+		<div id="one"><h1>Don't get epileptic</h1></div>
+		<div id="two"><h1>Don't get epileptic</h1></div>
+		<div id="three"><h1>Don't get epileptic</h1></div>
+		<div id="four"><h1>Don't get epileptic</h1></div>
+		<div id="five"><h1>Don't get epileptic</h1></div>
 		</body>
 </html>
-<<<<<<< HEAD
-  
-=======
->>>>>>> FETCH_HEAD
