--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="css/stylesheet2.css"/>
   </head>
   <body>
-    <div id="one"></div>
-    <div id="two"></div>
-    <div id="three"></div>
-    <div id="four"></div>
+   <div id="container">
+      <div class="head" id="one"></div>
+      <div class="head"  id="two"></div>
+      <div class="head"  id="three"></div>
+      <div class="head"  id="four"></div>
+    </div>
   </body>  
 </html>
